--- a/app/src/main/res/drawable/cerclebackgroundpurple.xml
+++ b/app/src/main/res/drawable/cerclebackgroundpurple.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/deeppurple"/>
+    <solid android:color="@color/colorPrimary"/>
     <size android:width="50dp" android:height="50dp"></size>
 </shape>
