--- a/app/src/main/res/layout/new_dashboard.xml
+++ b/app/src/main/res/layout/new_dashboard.xml
@@ -180,8 +180,10 @@
         <ScrollView
             android:visibility="visible"
             android:id="@+id/scroll_view"
+            android:layout_below="@+id/img_rll"
+            android:layout_centerInParent="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:orientation="vertical"
