--- a/app/src/main/res/layout/trade_recycler.xml
+++ b/app/src/main/res/layout/trade_recycler.xml
@@ -49,7 +49,7 @@
             android:textSize="16sp"
             android:textColor="@color/grey1"
             android:id="@+id/code"
-            android:text="Code"
+            android:text="Trade Code"
             android:fontFamily="sans-serif" />
 
         <TextView
@@ -131,6 +131,7 @@
             android:orientation="horizontal"
             android:weightSum="3"
             android:padding="3dp"
+            android:visibility="gone"
             android:layout_below="@+id/rel2"
             android:id="@+id/rel3">
         <TextView
@@ -173,6 +174,54 @@
             android:text="paymentDate"
             android:fontFamily="sans-serif" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3"
+            android:padding="3dp"
+            android:layout_below="@+id/rel3"
+            android:id="@+id/rel4">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="start"
+            android:textSize="16sp"
+            android:textColor="@color/grey1"
+            android:layout_marginTop="5dp"
+            android:id="@+id/email"
+            android:layout_below="@+id/mobile"
+            android:text="Email"
+            android:fontFamily="sans-serif" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.1"
+            android:layout_height="match_parent"
+            android:gravity="start"
+            android:textSize="16sp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/grey1"
+            android:layout_toRightOf="@+id/paymentDate"
+            android:layout_below="@+id/mobile"
+            android:id="@+id/emailc"
+            android:text=" : "
+            android:fontFamily="sans-serif" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1.9"
+            android:layout_height="match_parent"
+            android:gravity="start"
+            android:layout_marginLeft="5dp"
+            android:textSize="16sp"
+            android:textColor="@color/border_line"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/paymentdatec"
+            android:layout_below="@+id/mobile"
+            android:id="@+id/emailValue"
+            android:text="email"
+            android:fontFamily="sans-serif" />
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -182,10 +231,36 @@
             android:layout_alignParentEnd="true"
             android:background="@drawable/round_green_bg"
             android:layout_marginEnd="5dp"
+            android:visibility="gone"
             android:padding="5dp"
             android:textSize="15sp"
             android:textColor="@color/white"
             android:text="UnPaid" />
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/traderType"
+            android:gravity="center"
+            android:visibility="gone"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/round_cornered_bg"
+            android:layout_marginEnd="5dp"
+            android:padding="5dp"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:text="Commercial" />
+        <TextView
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/viewDetails"
+            android:gravity="center"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/round_cornered_bg"
+            android:textSize="15sp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:textColor="@color/white"
+            android:text="View" />
 
     </RelativeLayout>
 </RelativeLayout>
